<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_mentor_chat_item_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <!-- PROFILE CONTAINER -->
    <LinearLayout
        android:id="@+id/profileContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- IMAGE VIEW PROFILE -->
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/user_profile"/>

    </LinearLayout>

    <!-- MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/messageContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toStartOf="@id/profileContainer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- IMAGE SENT CONTAINER -->
        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white">

            <!-- IMAGE SENT -->
            <ImageView
                android:id="@+id/senderImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <!-- TEXT MESSAGE CONTAINER -->
        <LinearLayout
            android:id="@+id/messageTextContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:background="@drawable/sender_background"
            android:orientation="horizontal">

            <!-- TEXT MESSAGE -->
            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:padding="10dp"
                tools:text="Text example" />

        </LinearLayout>

        <!-- DATE MESSAGE -->
        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="4dp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>