...
        android:id="@+id/navigation_map"
        android:name="com.rudy.go4lunch.ui.map.MapFragment"
        android:label="I'm hungry !"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_restaurant"
        android:name="com.rudy.go4lunch.ui.restaurant.RestaurantsFragment"
        android:label="I'm hungry !"
        tools:layout="@layout/fragment_restaurants" />

    <fragment
        android:id="@+id/navigation_workmate"
        android:name="com.rudy.go4lunch.ui.workmates.WorkmatesFragment"
        android:label="Available workmates"
        tools:layout="@layout/fragment_workmates" />
</navigation>
